--- a/eskuppopup.html
+++ b/eskuppopup.html
@@ -1,32 +1,151 @@
-﻿<script type=text/javascript>
-var iRandom;
-function Restart()
-{
-iRandom = Math.floor(Math.random()*10)+1;
-alert('OK, I am thinking of a number between 1 and 10');
-}
-function Guess()
-{
-var yourGuess = document.getElementById('myGuess').value;
-if (yourGuess>iRandom)
-	alert('Too High.');
-if (yourGuess<iRandom)
-	alert('Too Low.');
-if (yourGuess==iRandom)
-	{
-	alert('Well done! You guessed it.');
-	Restart();
-	}
-}
-</script>
-<div>Enter your guess between 1 and 10: <input type=text id='myGuess' name='myGuess'>
-<input type='button' onClick='Guess()' value='Guess'>
-<br>
-<br>
-<input type='button' onClick='Restart()' value='Start Again'>
-<script type=text/javascript>
-Restart();
-</script>
+﻿<!doctype html>
+<html>
+	<head>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="css/tabber.css" type="text/css" />
+	<link rel="stylesheet" href="css/eskupext.css" type="text/css" />
+	<link rel="stylesheet" href="css/popup.css" type="text/css" />
+	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/eskup-api.js"></script>
+	<script type="text/javascript" src="js/tabber.js"></script>
+	<script type="text/javascript" src="js/windows.js"></script>
+	<script type="text/javascript" src="js/popup.js"></script>
+</head>
+<body>
 
+<iframe src="http://player.vimeo.com/video/55351695" width="WIDTH" height="HEIGHT" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe class="youtube-player" type="text/html" width="300" height="auto" src="http://www.youtube.com/embed/JW5meKfy3fY" frameborder="0">
+</iframe>
+<iframe src="http://www.dailymotion.com/embed/video/xl4oyv_sean-paul-feat-alexis-jordan-got-2-luv-u-clip-officiel_music" width="300" height="auto" frameborder="0"></iframe>
+
+<div class="main" id="main">
+
+<div class="new_message">
+<div><div style="padding-top:40px; padding-left:5px;"></div>
+<div class="counter" id="counter">280</div>
+<div class="commands">
+	<div class="send" id="send"><a href="#">mandar</a></div>
+	<div class="cancel" id="cancel"><a href="javascript:CancelUpdate()">cancelar</a></div>
+	
+	<div id="setbold"><a title="Negrita" href="#"><img src="img/bold.png" /></a></div>
+	<div id="setitalic"><a title="Cursiva" href="#"><img src="img/italica.png"  /></a></div>  
+	<div id="insertlink"><a href="#"><img src="img/link.png" /></a></div>
+	<div id="insertvideo"><a href="#" title="Insertar vídeo (experimental)"><img src="img/fotograma.png" /></a></div>
+	<div id="insertimage"><a href="#" title="Insertar imagen (como enlace)"><img src="img/image.png" /></a></div>
+	  
+	<div class="otros_servicios">Enviar también a: 
+	<a href="javascript:Send2Twitter()" title="Facebook"><img id="tw" src="img/twitter_off.png" /></a>
+	<a href="javascript:Send2Facebook()" title="Twitter"><img id = "fb" src="img/facebook_off.png" /></a>   
+	</div>
+</div>
+
+<form id="new_message" name="new_message" method="post" action="" onsubmit="javascript: Update()">
+  <label>
+	<div name="newtext" id="newtext" contenteditable></div>
+  </label>
+</form>
+</div>
+
+<div class = "imageselector" id="imageselector">
+	<p>Selecciona el elemento de la página actual que quieras adjuntar a tu mensaje:</p>
+	<a id="imagecancel" href="">Volver</a>
+	<div id="images"></div>
+</div>
+
+<div class = "thread" id="thread">
+<a href="javascript:CloseThread()">Cerrar</a>
+<!-- <a href="javascript:HyperTree()">HTree</a> -->
+<div id="thread_message_list"></div>
+</div>
+
+<div id="popupWnd"><div id="popupWndCtrl"><a href="javascript:disablePopup()" id="popupClose">cerrar [x]</a></div><div id="popupWndContent"></div></div>
+
+<!-- <div class="drag_here" ondragover="event.preventDefault()" ondrop="event.stopPropagation();event.preventDefault();alert(event.dataTransfer.getData('text/plain'));">arrastra aqui</div> -->
+
+<div class="tabber" id="tabber">
+	<div class="tabbertab">       
+	<h3>sigo</h3>        			
+		<div class="section_head">Mensajes que sigo en Eskup</div>	
+		<div class="search"><input name="search" type="text" value="texto a buscar..." size="15" maxlength="25" id="searchtxt_sigo"/><a href="javascript:Search('sigo')">Buscar</a></div>
+		<div class="message_list" id="sigo">
+		</div>
+	</div>
+	
+	<div class="tabbertab">        
+	<h3>prvdo</h3>    
+		<div class="section_head">Mensajes privados que me han enviado en Eskup</div>
+		<div class="search"><input name="search" type="text" value="texto a buscar..." size="15" maxlength="25" id="searchtxt_privado"/><a href="javascript:Search('privado')">Buscar</a></div> 
+		<div class="message_list" id="privado">
+		</div>
+	</div>
+
+	<div class="tabbertab">
+	<h3>todo</h3>    
+		<div class="section_head">Todos los mensajes de Eskup</div>
+		<div class="search"><input name="search" type="text" value="texto a buscar..." size="15" maxlength="25" id="searchtxt_todo"/><a href="javascript:Search('todo')">Buscar</a></div>
+		<div class="message_list" id="todo">       
+		</div>
+	</div>
+	
+	<div class="tabbertab">
+	<h3>míos</h3>    
+		<div class="section_head">Mensajes que yo he enviado a Eskup</div>
+		<div class="search"><input name="search" type="text" value="texto a buscar..." size="15" maxlength="25" id="searchtxt_mios"/><a href="javascript:Search('mios')">Buscar</a></div>
+		<div class="message_list" id="mios">        
+		</div>
+	</div>
+	
+	
+	<div class="tabbertab">
+	<h3>temas </h3>    
+		<div class="section_head">
+		<div id="temas">
+		<div id="temas_menu">
+			<span><a href="#" class="list_opener_mistemas">Temas que sigo<em ><img src="img/dropdown.png" alt="dropdown" /></em></a></span>
+			<ul id="temas_lista"></ul>
+			<span><a href="#" class="list_opener_block">Temas bloqueados<em ><img src="img/dropdown.png" alt="dropdown" /></em></a></span>
+			<ul id="temas_block_lista"></ul>
+		</div>
+		<div id="temas_head"><a target="_blank" id="tema_actual">Selecciona un tema</a><a id="seguiropcion"></a><a id="blockopcion"></a></div>        
+		</div></div>
+		<div class="message_list" id="tema">        
+		</div>
+	</div>
+	
+	 <div class="tabbertab">
+	<h3>favs</h3>    
+		<div class="section_head">Mis mensajes favoritos</div>
+		<div class="message_list" id="favs">        
+		</div>
+	</div>
+	
+	
+	<div class="tabbertab">
+	<h3>perfil</h3>
+	<div id="profile" class="profile">
+		<div id="mifoto" style="float:left"></div>
+		<div class="profile_item" id="nombre"></div>
+		<div class="profile_item" id="apellidos"></div>
+		<div class="profile_item" id="urlpersonal"></div>
+		<div class="profile_item" id="descripcion"></div>
+		<div class="profile_item" id="blog"></div>
+		
+		<div id="follows">
+		<div id="follow-to">
+			<h4>Sigo a:</h4>
+			<div class="follow-to-users" id="follow-to-users"></div>
+		</div>
+		<div id="follow-me">
+			<h4>Me siguen:</h4>
+			<div class="follow-me-users" id="follow-me-users"></div>       
+		</div>
+		</div>
+	</div>
+		
+		
+	</div>
+	</div>
+</div>
+</body>
 
 
