--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,22 @@
 ﻿<!doctype html>
 <html>
-	<head>
+<head>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="css/eskupext.css" type="text/css" />
+	<link rel="stylesheet" href="css/popup.css" type="text/css" />
+	<link rel="stylesheet" href="css/editor.css" type="text/css" />
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
+	<link rel="stylesheet" href="css/tree.css" type="text/css" />
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/eskup-api-old.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
 	<script type="text/javascript" src="js/windows.js"></script>
-	<script type="text/javascript" src="js/canvas-editor.js"></script>
 	<script type="text/javascript" src="js/dialog.js"></script>
-	<script type="text/javascript" src="js/fabric.js"></script>
-	<script type="text/javascript" src="js/caman.3.3.0.full.min.js"></script>
+	<script type="text/javascript" src="js/popup.js"></script>
+	<script type="text/javascript" src="lib/d3.v2.min.js"></script>
 </head>
 <body>
-<!-- <canvas id="canvas-test" style="border: 1px solid black;"></canvas> -->
 
 <div id = "dialog">
 	<div id="dlg_msg">¿está seguro de querer continuar?</div>
@@ -24,31 +25,11 @@
 	<div id="dlg_cancel" class="button">Cancel</div>
 </div>
 
-<div id="selector">
-	<div id="selector-content-editor">
-		<canvas id="selector-canvas-editor" width="420" height="380"></canvas>
-		<div id="selector-canvas-controls">
-			<input id="canvas-remove" type="button" value="borrar"/>
-		</div>
-	</div>
-
-	<div id="selector-content">
-		<div id="selector-content-normal"></div>
-		<div id="selector-content-small" style="display:none;"></div>
-	</div>
-	<div id="selector-footer">
-		<div id="insert-cancel" class="button">cancelar</div>
-		<div id="insert-confirm" class="button">insertar</div>
-
-	</div>
-</div>
-
-
-
 <!-- SECCION. MENSAJES -->
 	<div id="my-favs" class="section-container">
 	<h1>mensajes</h1>
 		<ul id="navigator">
+			<li id="todo" class="nav">todos</li>
 			<li id="sigo" class="nav">seguidos</li>
 			<li id="mios" class="nav">propios</li>
 			<li id="priv" class="nav">privados</li>
@@ -63,6 +44,7 @@
 	</div>
 
 	<div class="board">
+		<div id="editor">
 		<div id="commands">
 			<div id="counter">280</div>
 			<div class="send" id="send"><a href="#">mandar</a></div>
@@ -79,9 +61,9 @@
 			<input id="send2tt" type="checkbox" title="twitter"/>
 		</div>
 		<div id="newmessage" contenteditable></div>
-		<div id="newimage"><canvas id="canvasimage"></canvas></div>
-	</div>
+		</div>
 	
+	</div>
 
 <!-- SECCION. PERFIL -->
 	<div id="my-profile" class="section-container">
@@ -124,5 +106,6 @@
 	</div>
 
 </body>
+</html>
 
 
