uf que casnancio

--- a/image_editor.html
+++ b/image_editor.html
@@ -128,6 +128,8 @@
 		</div>
 		<h1>reordenar</h1>
 		<input type="button" id="canvas-layout" value="Layout">
+		<input type="checkbox" id="canvas-layout-crop">
+		<label for="canvas-layout-crop">Permitir recortar y transformar elementos para un mejor ajuste</label>
 
 		<label for="back-color">Color de fondo:</label>
 		<input id="back-color" name="back-color" type="color" value="#ffffff">
