cambio de orden de capas

--- a/image_editor.html
+++ b/image_editor.html
@@ -174,7 +174,8 @@
 
 		
 		<h1 class="off">capas</h1>
-		<div id="canvas-layers"></div>
+		<div id="canvas-layers"><div></div>
+		</div>
 		<h1 class="off">hitorial</h1>
 		<div id="canvas-history"></div>
 
