--- a/image_editor.html
+++ b/image_editor.html
@@ -142,6 +142,7 @@
 
 			<input id="canvas-remove" type="button" value="borrar"/>
 			<input id="canvas-clear" type="button" value="limpiar"/>
+			<input id="canvas-filter" type="button" value="filtro"/>
 		</div>
 		<!-- Panel de dibujo -->
 		<h1 class="off">dibujo</h1>
@@ -181,7 +182,5 @@
 
 	</div> <!-- canvas controls -->
 </div>
-
-
 </body>
 </html>
